# qa_guru_hw_15

CoolProject/: pyproject.toml
